--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     </div>
     <p style="font-size: 25px">Whould you recommend Clarusway to a friend?</p>
     <div>
-      <input type="radio" name id />
+      <input type="radio" name id="would" />
       <label for>Definitely,Yes</label>
       <br />
       <br />
-      <input type="radio" name id />
+      <input type="radio" name id="would" />
       <label for>Maybe</label>
       <br />
       <br />
-      <input type="radio" name id />
+      <input type="radio" name id="would" />
       <label for>Not sure</label>
       <br />
       <br />
-      <input type="radio" name id />
+      <input type="radio" name id="would" />
       <label for>Definitely,No</label>
       <br />
       <br />
